# claude-code-proxy-PRIVACY-HARDENED

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_cancellation.py
.github/workflows/: test.yml
docs/: 00-quickstart.md  01-setup.md  02-architecture.md  03-privacy-hardening.md  04-fireworks-caching.md  05-known-limitations.md  06-changes-from-upstream.md  07-scripts.md
scripts/: logs.sh  restart.sh  start.sh  stop.sh  test-docker.sh  tokenizer-hashes.txt  update-tokenizer.sh
src/: __init__.py  main.py
src/api/: endpoints.py
src/conversion/: request_converter.py  response_converter.py
src/core/: client.py  config.py  constants.py  model_manager.py
src/models/: claude.py
tests/: conftest.py  test_error_envelope.py  test_main.py  test_model_routing.py  test_request_converter.py  test_streaming_tool_args.py  test_token_counting.py
