[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "claude-code-proxy"
version = "1.0.0"
description = "Proxy server enabling Claude Code to work with OpenAI-compatible API providers"
readme = "README.md"
authors = [
    {name = "Claude Code Proxy", email = "noreply@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.13",
    "uvicorn[standard]==0.34.3",
    "pydantic==2.11.7",
    "python-dotenv==1.1.0",
    "openai==1.90.0",
    "tiktoken==0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "httpx==0.28.1",
]

[project.urls]
Upstream = "https://github.com/fuergaosi233/claude-code-proxy"

[project.scripts]
claude-code-proxy = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "black==25.1.0",
    "isort==6.0.1",
    "mypy==1.16.1",
    "pyinstaller==6.15.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
